--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 8.1285px;
-    gap: 5.42px;
-    background: #FFFFFF;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 5.419px;
+    /* padding: 8.1285px; */
+    /* gap: 5.42px; */
+    /* background: #FFFFFF; */
+    /* box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12); */
+    /* border-radius: 5.419px; */
 }
 
 .answerText {
@@ -19,7 +19,6 @@
     order: 1;
     align-self: stretch;
     flex-grow: 0;
-    margin: 11px;
     white-space: normal;
     word-wrap: break-word;
     max-width: 800px;
@@ -28,7 +27,8 @@
 
 .answerFooter {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: column;
+    gap: 6px;
     width: 100%;
     height: auto;
     box-sizing: border-box;
@@ -36,7 +36,7 @@
 }
 
 .answerDisclaimerContainer {
-    justify-content: center;
+    /* justify-content: center; */
     display: flex;
 }
 
@@ -121,8 +121,8 @@
 }
 
 .accordionTitle {
-    margin-right: 5px;
-    margin-left: 10px;
+    /* margin-right: 5px; */
+    /* margin-left: 10px; */
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
