--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -1,13 +1,14 @@
 .questionInputContainer {
     height: 120px;
-    position: absolute;
-    left: 6.5%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
-    background: #FFFFFF;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 8px;
+    width: 100%;
+    max-width: 700px;
+    border-radius: 12px;
+    border: 1px solid var(--Border-borderOpaque, #E8E8E8);
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    height: 80px;
+    position: relative;
+    margin: 0 auto;
 }
 
 .questionInputTextArea {
