--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -20,7 +20,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #FFFFFF 57.29%, #EEF6FE 100%);
+    /* background: radial-gradient(108.78% 108.78% at 50.02% 19.78%,#FFFFFF 57.29%,#e1eee2 100%); */
+    background: white;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     border-radius: 8px;
     overflow-y: auto;
@@ -38,7 +39,7 @@
 .chatEmptyStateTitle {
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 22px;
     display: flex;
     align-items: flex-end;
     text-align: center;
@@ -61,41 +62,85 @@
 }
 
 .chatIcon {
-    height: 62px;
-    width: 62px;
+    width: 272px;
+    max-width: 50vw;
 }
 
 .chatMessageStream {
     flex-grow: 1;
-    max-width: 1028px;
+    max-width: 860px;
     width: 100%;
     overflow-y: auto;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding-left: 46px;
+    padding-right: 46px;
     display: flex;
     flex-direction: column;
-    margin-top: 24px;
+    margin-top: 54px;
+    gap: 26px;
+
+}
+@media screen and (max-width: 768px) {
+    .chatMessageStream {
+        padding-left: 26px;
+        padding-right: 26px;
+        margin-top: 26px;
+        gap: 16px;
+    }
+}
+
+.chatMessage {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    margin-bottom: 12px;
+    gap: 10px;
+}
+
+.messageProfilePhoto {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin-right: 12px;
+}
+
+.message {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex: auto;
+    order: 1;
+    flex-grow: 1;
+}
+
+.chatMessageAuthor {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
 }
 
 .chatMessageUser {
     display: flex;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     margin-bottom: 12px;
 }
 
 .chatMessageUserMessage {
-    padding: 20px;
-    background: #EDF5FD;
-    border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
+    /* padding: 20px; */
+    /* background: #EDF5FD; */
+    /* border-radius: 8px; */
+    /* box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12); */
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 22px;
     color: #242424;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+    /* flex: none; */
+    /* order: 0; */
+    /* flex-grow: 0; */
     white-space: pre-wrap;
     word-wrap: break-word;
     max-width: 800px;
@@ -103,7 +148,7 @@
 
 .chatMessageGpt {
     margin-bottom: 12px;
-    max-width: 80%;
+    /* max-width: 80%; */
     display: flex;
 }
 
@@ -138,9 +183,9 @@
     padding-bottom: 24px;
     padding-left: 24px;
     padding-right: 24px;
-    width: calc(100% - 100px);
+    /* width: calc(100% - 100px); */
+    width: 100%;
     max-width: 1028px;
-    margin-bottom: 50px;
     margin-top: 8px;
 }
 
