--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -33,8 +33,8 @@
 
 .headerIcon {
     height: 32px;
-    width: 32px;
-    margin-left: 36px;
+    /* width: 32px; */
+    margin: 10px 32px;
 }
 
 .shareButtonContainer {
